<resources>
    <string name="app_name">TMDB Guide</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_celebrities">Celebrities</string>

    <string name="hello_blank_fragment">Hola</string>

    <string name="title_activity_videos">VideosActivity</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="welcome">"Welcome !"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="alert_required">Required</string>

    <string name="key_username">key_username_save</string>
    <string name="key_password">key_password_save</string>
    <string name="key_session_id">key_session_id_save</string>
    <string name="key_token">key_token_save</string>
    <string name="key_id_videos_passed">key_id_videos_passed</string>
    <string name="key_id_series_passed">key_id_series_passed</string>
    <string name="key_id_passed">key_id_passed</string>
    <string name="key_create_success">parameter_create_success</string>
    <string name="key_create_session_id">parameter_create_session_id</string>
    <string name="key_actor_id">parameters_actor_id</string>
    <string name="key_guest_session">parameter_guest_session</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>

    <string name="tv_error_en_la_red">Error en la red</string>
    <string name="tv_check_internet_connection">Revisa tu conexión a internet e intentalo de nuevo.</string>
    <string name="tv_sign_up">Sign Up</string>
    <string name="tv_easier_sign_up">It\'s easier to sign up now</string>
    <string name="tv_welcome_back">Welcome Back,</string>
    <string name="tv_log_in">Log In!</string>
    <string name="tv_broadcasting_now">Broadcasting now</string>
    <string name="tv_on_the_air_today">On the air today</string>
    <string name="tv_top_rated">Top rated</string>
    <string name="tv_in_the_air">In the air</string>
    <string name="tv_upcoming">Upcoming</string>
    <string name="tv_popular">Popular</string>
    <string name="tv_known_for">Known For</string>
    <string name="tv_birthplace">Birthplace</string>
    <string name="tv_date_of_birth">Date Of Birth</string>
    <string name="tv_biography">Biography</string>
    <string name="tv_movies">Movies</string>
    <string name="tv_tv_shows">TV Shows</string>
    <string name="tv_release_date">Release Date:</string>
    <string name="tv_generos">Genres:</string>
    <string name="tv_companie_production">Production Companies:</string>
    <string name="tv_languajes">Languajes:</string>
    <string name="tv_watch_now">Watch now</string>
    <string name="tv_languaje_parameters">Languaje: %s</string>
    <string name="tv_region_parameters">Region: %s</string>
    <string name="tv_does_not_exist_video">No Existe El Video.</string>
    <string name="tv_loading">Cargando…</string>

    <string name="btn_use_email">I\'ll use email</string>
    <string name="btn_guest_sesion">Guest Session</string>
    <string name="btn_account_login">Already have account? Login</string>
    <string name="btn_log_in">Log In</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_name_of_celebritie">Name Of Celebritie</string>

    <string name="sw_remember_me">Remember me</string>

    <string name="msj_logging_in">Loggind In</string>
    <string name="msj_incorrect_data">Incorrect Data</string>
    <string name="msj_does_not_exit">Does not exist</string>
    <string name="msj_welcome_user">Welcome %s</string>
    <string name="msj_closing_session">Closing Session.</string>

    <string name="section_suggestions">Suggestions</string>
    <string name="section_details">Details</string>
    <string name="section_seasons">Seasons</string>

</resources>