<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".homeModule.view.HomeFragment">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center"
        android:contentDescription="@null"
        android:src="@drawable/ic_movie_frame"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_Premires"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="gone"
        tools:listitem="@layout/item_premires"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_broadcasting_now"
        style="@style/TextAppearance.TMDB.Subtitle2"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_BroadNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="gone"
        tools:listitem="@layout/item_card"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_on_the_air_today"
        style="@style/TextAppearance.TMDB.Subtitle2"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_AirToday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="gone"
        tools:listitem="@layout/item_card"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_top_rated"
        style="@style/TextAppearance.TMDB.Subtitle2"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_TopRated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="gone"
        tools:listitem="@layout/item_card"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_in_the_air"
        style="@style/TextAppearance.TMDB.Subtitle2"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_OnTheAir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="gone"
        tools:listitem="@layout/item_card"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_TopRatedTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="gone"
        tools:listitem="@layout/item_premires"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_upcoming"
        style="@style/TextAppearance.TMDB.Subtitle2"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_Upcoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="gone"
        tools:listitem="@layout/item_card"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_popular"
        style="@style/TextAppearance.TMDB.Subtitle2"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_Popular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="gone"
        tools:listitem="@layout/item_card"/>

</LinearLayout>