<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".loginModule.view.LoginActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/common_padding_default"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_movie_frame"
            android:contentDescription="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_sign_up"
            android:textStyle="bold"
            android:textAlignment="center"
            style="@style/TextAppearance.TMDB.Headline4"
            app:layout_constraintTop_toBottomOf="@id/imgIcon"
            app:layout_constraintBottom_toTopOf="@id/tvSubtitle"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_easier_sign_up"
            android:textAlignment="center"
            style="@style/TextAppearance.TMDB.Subtitle1"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintBottom_toTopOf="@id/containerButtons"/>

        <LinearLayout
            android:id="@+id/containerButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
            app:layout_constraintBottom_toTopOf="@id/tvLogIn">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSigIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_use_email"
                style="@style/Theme.TMDB.Buttons"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGuestSession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_guest_sesion"
                style="@style/Theme.TMDB.Buttons.Outlined"/>

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLogIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/btn_account_login"
            android:textAlignment="center"
            android:textColor="@color/primaryDarkColor"
            style="@style/TextAppearance.TMDB.Subtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerButtons"
            app:layout_constraintBottom_toTopOf="@id/TMDBIcon"/>

        <ImageView
            android:id="@+id/TMDBIcon"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/tmdb_image"
            android:padding="@dimen/common_padding_default"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>