<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detailsActorModule.view.DetailsActorActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Details"
            app:navigationIcon="@drawable/ic_arrow_back"
            style="@style/Widget.MaterialComponents.Toolbar.Primary" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/common_padding_default"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgProfile"
                android:transitionName="transitionImgPoster"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvName"
                app:layout_constraintBottom_toBottomOf="@id/tvDateBirth"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="John Morales"
                android:layout_marginStart="@dimen/common_padding_min"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgProfile"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/TextAppearance.MaterialComponents.Headline5"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLabelKnownFor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_known_for"
                android:layout_marginStart="@dimen/common_padding_min"
                app:layout_constraintTop_toBottomOf="@id/tvName"
                app:layout_constraintStart_toEndOf="@id/imgProfile"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvKnownFor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Known For"
                android:layout_marginStart="@dimen/common_padding_min"
                app:layout_constraintTop_toBottomOf="@id/tvLabelKnownFor"
                app:layout_constraintStart_toEndOf="@id/imgProfile"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLabelBirthplace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_birthplace"
                android:layout_marginStart="@dimen/common_padding_min"
                app:layout_constraintTop_toBottomOf="@id/tvKnownFor"
                app:layout_constraintStart_toEndOf="@id/imgProfile"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvBirthplace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Known For"
                android:layout_marginStart="@dimen/common_padding_min"
                app:layout_constraintTop_toBottomOf="@id/tvLabelBirthplace"
                app:layout_constraintStart_toEndOf="@id/imgProfile"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLabelDateBirth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_date_of_birth"
                android:layout_marginStart="@dimen/common_padding_min"
                app:layout_constraintTop_toBottomOf="@id/tvBirthplace"
                app:layout_constraintStart_toEndOf="@id/imgProfile"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDateBirth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Known For"
                android:layout_marginStart="@dimen/common_padding_min"
                app:layout_constraintTop_toBottomOf="@id/tvLabelDateBirth"
                app:layout_constraintStart_toEndOf="@id/imgProfile"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/common_padding_default"
                app:layout_constraintTop_toBottomOf="@id/tvDateBirth"
                style="@style/Separator"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLabelBiography"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_biography"
                app:layout_constraintStart_toStartOf="@id/separator"
                app:layout_constraintEnd_toEndOf="@id/separator"
                app:layout_constraintTop_toBottomOf="@id/separator"
                style="@style/TextAppearance.MaterialComponents.Headline5"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvBiography"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Biography"
                app:layout_constraintStart_toStartOf="@id/separator"
                app:layout_constraintEnd_toEndOf="@id/separator"
                app:layout_constraintTop_toBottomOf="@id/tvLabelBiography"
                style="@style/TextAppearance.MaterialComponents.Body1"/>

            <View
                android:id="@+id/separatorMovies"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/common_padding_default"
                app:layout_constraintTop_toBottomOf="@id/tvBiography"
                style="@style/Separator"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLabelMovies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_movies"
                app:layout_constraintStart_toStartOf="@id/separator"
                app:layout_constraintEnd_toEndOf="@id/separator"
                app:layout_constraintTop_toBottomOf="@id/separatorMovies"
                style="@style/TextAppearance.MaterialComponents.Headline5"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:listitem="@layout/item_card"
                app:layout_constraintTop_toBottomOf="@id/tvLabelMovies"/>

            <View
                android:id="@+id/separatorTV"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/common_padding_default"
                app:layout_constraintTop_toBottomOf="@id/recyclerviewMovies"
                style="@style/Separator"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLabelTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_tv_shows"
                app:layout_constraintStart_toStartOf="@id/separator"
                app:layout_constraintEnd_toEndOf="@id/separator"
                app:layout_constraintTop_toBottomOf="@id/separatorTV"
                style="@style/TextAppearance.MaterialComponents.Headline5"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:listitem="@layout/item_card"
                app:layout_constraintTop_toBottomOf="@id/tvLabelTV"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>